fixed the spacing on the h1 to make lit look nicer

--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,7 @@ h1 {
 }
 
 th, td {
-
+text-align: center;
 }
 
 @media only screen and (max-width: 25em) {
